--- a/sandbox.Rmd
+++ b/sandbox.Rmd
@@ -4,6 +4,27 @@ output: html_notebook
 ---
 
 ```{r}
+abilities <- c(
+  "strength",
+  "dexterity",
+  "constitution",
+  "intelligence",
+  "wisdom",
+  "charisma"
+)
+
+races <- c(  
+  "dragonborn",
+  "dwarf",
+  "elf",
+  "gnome",
+  "half.elf",
+  "half.orc",
+  "halfling",
+  "human",
+  "tiefling"
+)
+
 roll <- function(n, d) {
   values <- sample(1:d, n, replace = TRUE) # roll a d-sided die n times
   sum <- sum(values)
@@ -22,41 +43,20 @@ roll.stats <- function(n) {
   X <- matrix(1:n*6, nrow = n, ncol = 6)
   X[] <- sapply(X, function(ij) roll.stat())
   df <- as.data.frame(X)
-  names(df) <- c(
-    "strength",
-    "dexterity",
-    "constitution",
-    "intelligence",
-    "wisdom",
-    "charisma"
-  )
+  names(df) <- sapply(abilities, function(a) sprintf("%s.roll", a), USE.NAMES = FALSE)
+  df$race <- apply(df, 1, function(i) sample(races, 1))
   return(df)
 }
 
-assign.race <- function() {
-  races <- c(
-    "dragonborn",
-    "dwarf",
-    "elf",
-    "gnome",
-    "half.elf",
-    "half.orc",
-    "halfling",
-    "human",
-    "tiefling"
-  )
-  return(sample(races, 1, replace = TRUE))
-}
+sample(races, 1)
 ```
 
 ```{r}
 set.seed(0)
-stats <- roll.stats(100)
-stats$race <- apply(stats, 1, function(i) assign.race())
+stats.rolled <- roll.stats(100)
 ```
 
 ```{r}
-name <- c("dragonborn", "dwarf", "efl", "gnome", "half.elf", "half.orc", "halfling", "human", "tiefling")
 speed <- c(30, 25, 30, 25, 30, 30, 25, 30, 30)
 strength.mod <- c(2, 0, 0, 0, 0, 2, 0, 1, 0)
 dexterity.mod <- c(2, 0, 0, 0, 0, 2, 0, 1, 0)
@@ -64,36 +64,48 @@ constitution.mod <- c(0, 2, 0, 0, 0, 1, 0, 1, 0)
 wisdom.mod <- c(0, 0, 0, 0, 0, 0, 0, 1, 0)
 intelligence.mod <- c(0, 0, 0, 2, 0, 0, 0, 1, 1)
 charisma.mod <- c(1, 0, 0, 0, 2, 0, 0, 1, 2)
-random1.mod <- c(0, 0, 0, 0, 1, 0, 0, 0, 0)
-random2.mod <- c(0, 0, 0, 0, 1, 0, 0, 0, 0)
 
-races <- data.frame(
+racial.mods <- data.frame(
   speed,
   strength.mod,
   dexterity.mod,
   constitution.mod,
   wisdom.mod,
   intelligence.mod,
-  charisma.mod,
-  random1.mod,
-  random2.mod
+  charisma.mod
 )
 
-rownames(races) <- name
-races
+rownames(racial.mods) <- races
+racial.mods
 ```
 
 ```{r}
-stats <- merge(x = stats, y = races, by.x = "race", by.y = "row.names", all = TRUE)
-```
-
-```{r}
-stats$strength <- stats$strength + stats$strength.mod
+stats <- merge(x = stats.rolled, y = racial.mods, by.x = "race", by.y = "row.names", all = TRUE)
 stats
 ```
 
+```{r}
+# half elves get +2 charisma and +1 to any two abilities of their choice
+set.seed(NULL)
+mod.options <- abilities[abilities != "charisma"]
+mod.options <- sapply(mod.options, function(a) sprintf("%s.mod", a), USE.NAMES = FALSE)
+for (i in 1:nrow(stats)) {
+  if (stats[i, "race"] == "half.elf") {
+    chosen.mods <- sample(mod.options, 2, replace = FALSE)
+    stats[i, chosen.mods[1]] = 1
+    stats[i, chosen.mods[2]] = 1
+  }
+}
+```
 
-
+```{r}
+stats$strength <- stats$strength.roll + stats$strength.mod
+stats$dexterity <- stats$dexterity.roll + stats$dexterity.mod 
+stats$constitution <- stats$constitution.roll + stats$constitution.mod
+stats$wisdom <- stats$wisdom.roll + stats$wisdom.mod
+stats$intelligence <- stats$intelligence.roll + stats$intelligence.mod
+stats$charisma <- stats$charisma.roll + stats$charisma.mod
+```
 
 
 
